--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- top banner area  -->
     <section class="top-banner">
       <div class="half-with">
         <h1>Welcome To</h1>
@@ -23,6 +24,18 @@
       </div>
       <div class="half-with">
         <img src="images/my-portfolio.png" alt="" />
+      </div>
+    </section>
+    <!-- dream big area -->
+    <section class="big-dream 🙋 ">
+      <div class="half-with 🙂 ">
+        <img src="images/portfolio-2.png" alt="">
+      </div>
+      <div class="half-with 😉">
+          <h1>Dream Big</h1>
+          <h3>Become a web developer</h3>
+          <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+          <a class="link-button" target="_blank" href="#">download Resume</a>
       </div>
     </section>
   </body>
